# django-practice

./: .env.production.example  .gitignore  README.md  manage.py  pyproject.toml  uwsgi.ini
api/v1/: urls.py
cves/: admin.py  api_urls.py  api_views.py  filters.py  forms.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
cves/management/commands/: import_nvd_cves.py
cves/migrations/: 0001_initial.py
cves/static/cves/: styles.css
cves/templates/cves/: base.html  confirm_delete.html  detail.html  form.html  list.html
hosts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
hosts/migrations/: 0001_initial.py
hosts/static/hosts/: index.css  index.js
hosts/templates/hosts/: index.html
main/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
main/settings/: __init__.py  base.py  development.py  production.py
polls/: models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: datatables.html  detail.html  index.html  results.html
snippets/: models.py  serializers.py  tests.py  urls.py  views.py
snippets/migrations/: 0001_initial.py  0002_alter_snippet_language.py
