[project]
name = "django-practice"
version = "0.1.0"
description = "Writing your first Django app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2.15",
    "django-background-tasks==1.2.8", # Background tasks
    "django-environ==0.14.0",         # Load environment variables from .env files
    "django-filter>=25.2",
    "djangorestframework==3.17.1",
    "markdown==3.10.2",
    "pygments==2.20.0",
    "uwsgi==2.0.31",
    "whitenoise==6.12.0",             # Serve static files in production
]

[dependency-groups]
dev = [
    "django-debug-toolbar==7.0.0",          # Debugging tool for Django
    "django-silk==5.5.0",                   # Profiling and monitoring tool for Django
    "django-stubs[compatible-mypy]==6.0.6", # Type hints for Django
    "pylint-django==2.7.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "main.settings"

[tool.pylint.'MASTER']
ignore = [".venv", "migrations"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["missing-docstring", "inconsistent-return-statements", "no-member"]

[tool.black]
target-version = ["py313"]

[tool.isort]
profile = "black"
combine_as_imports = true
py_version = 313
known_first_party = ["main"]
known_local_folder = ["polls", "snippets"]
atomic = true
balanced_wrapping = true
combine_star = true
group_by_package = true
case_sensitive = true
