[project]
name = "django-practice"
version = "0.1.0"
description = "Writing your first Django app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.16",
    "django-background-tasks==1.2.8", # Background tasks
    "django-environ==0.14.0",         # Load environment variables from .env files
    "django-filter==26.1",
    "djangorestframework==3.17.1",
    "markdown==3.10.2",
    "pygments==2.20.0",
    "uwsgi==2.0.31",
    "whitenoise==6.12.0",             # Serve static files in production
]

[dependency-groups]
dev = [
    "django-debug-toolbar==7.0.0",                        # Debugging tool for Django
    "django-silk==5.5.0",                                 # Profiling and monitoring tool for Django
    "django-stubs[compatible-mypy]==6.0.6",               # Type hints for Django
    "djangorestframework-stubs[compatible-mypy]==3.17.0",
    "djlint==1.40.6",
    "pylint-django==2.8.0",
]

[tool.mypy]
python_version = "3.12"
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "main.settings"

[tool.pylint.MASTER]
ignore = [".venv", "migrations"]
load-plugins = ["pylint_django"]
django-settings-module = "main.settings"

[tool.pylint.MESSAGES_CONTROL]
# Django CBVs/DRF ViewSets inherit deep MRO trees; field-list overlap across
# form/serializer/import modules is intentional shared schema, not accidental
# copy-paste; management commands naturally take many options/locals.
disable = [
    "missing-docstring",
    "inconsistent-return-statements",
    "no-member",
    "too-many-ancestors",
    "duplicate-code",
    "too-many-locals",
    "too-many-branches",
    "too-few-public-methods",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".venv", "**/migrations/**"]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["main", "polls", "snippets", "hosts", "api", "cves"]
combine-as-imports = true
